--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "fastapi[standard]>=0.115.12",
     "pre-commit>=4.2.0",
 ]
 
@@ -12,6 +13,7 @@ dependencies = [
 dev = [
     "poethepoet>=0.34.0",
     "pre-commit>=4.2.0",
+    "pytest>=8.3.5",
     "ruff>=0.11.11",
 ]
 
