--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,11 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi[standard]>=0.115.12",
-    "passlib>=1.7.4",
+    "passlib[bcrypt]>=1.7.4",
     "pre-commit>=4.2.0",
+    "pyjwt>=2.10.1",
     "python-jose>=3.4.0",
+    "python-multipart>=0.0.20",
     "sqlalchemy>=2.0.41",
     "uvicorn>=0.34.2",
     "yfinance>=0.2.61",
