--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ dependencies = [
     "passlib[bcrypt]>=1.7.4",
     "pre-commit>=4.2.0",
     "pyjwt>=2.10.1",
+    "pytest-asyncio>=1.0.0",
+    "pytest-mock>=3.14.1",
     "python-jose>=3.4.0",
     "python-multipart>=0.0.20",
     "scipy>=1.15.3",
@@ -36,3 +38,8 @@ format = "ruff format"
 check = "ruff check"
 lint = ["format", "check"]
 dev = "uvicorn main:app --reload"
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+testpaths = ["tests"]
+python_files = "test_*.py"
